guacamole/guacamole-guacd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacd
  template:
    metadata:
      labels:
        app: guacd
    spec:
      nodeSelector:
        guacamole: allowed
      containers:
        - name: guacd
          image: guacamole/guacd:latest
          ports:
            - containerPort: 4822
---
apiVersion: v1
kind: Service
metadata:
  name: guacd
  namespace: guacamole
spec:
  ports:
    - port: 4822
      targetPort: 4822
  selector:
    app: guacd
