guacamole/guacamole-pgsql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guac-postgres
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guac-postgres
  template:
    metadata:
      labels:
        app: guac-postgres
    spec:
      nodeSelector:
        guacamole: allowed
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: guac-postgres-persistent-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: guac-postgres-persistent-storage
          persistentVolumeClaim:
            claimName: guac-postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: guac-postgres
  namespace: guacamole
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: guac-postgres
