guacamole/guacamole-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-web
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole-web
  template:
    metadata:
      labels:
        app: guacamole-web
    spec:
      nodeSelector:
        guacamole: allowed
      containers:
        - name: guacamole
          image: guacamole/guacamole:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole-web
  namespace: guacamole
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: guacamole-web
